crates/bitnet-runtime-feature-flags-core/tests/snapshots/snapshot_tests__cpu_only_activation_labels.snap
---
source: crates/bitnet-runtime-feature-flags-core/tests/snapshot_tests.rs
expression: "labels.join(\"\\n\")"
---
cpu
inference
kernels
tokenizers
