crates/bitnet-runtime-feature-flags-core/tests/snapshots/snapshot_tests__empty_activation_labels_is_empty.snap
---
source: crates/bitnet-runtime-feature-flags-core/tests/snapshot_tests.rs
expression: "format!(\"count={}\", labels.len())"
---
count=0
